--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,4 +10,6 @@ jobs:
           node-version: 20
       - run: npm install && npm install -g @lhci/cli@0.12.x
       - run: npm run build
-      - run: lhci autorun --collect.staticDistDir=.next
+      - run: lhci autorun
+        env:
+          LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
