--- a/.github/workflows/lhci.yml
+++ b/.github/workflows/lhci.yml
@@ -10,6 +10,7 @@ jobs:
           node-version: 20
       - run: npm install && npm install -g @lhci/cli@0.12.x
       - run: npm run build
-      - run: lhci autorun
+      - run: lhci collect
+      - run: lhci upload
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
