--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -1,4 +1,4 @@
-name: "Lighthouse Analysis"
+name: Lighthouse Analysis
 
 on:
   pull_request:
@@ -14,7 +14,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20
-      - run: npm install && npm install -g @lhci/cli@0.12.x
+      - uses: bahmutov/npm-install@v1
+      - run: npm install -g @lhci/cli@0.12.x
       - run: npm run build
       - run: lhci collect
       - run: lhci upload
