--- a/.github/workflows/bundle_analysis.yml
+++ b/.github/workflows/bundle_analysis.yml
@@ -68,6 +68,7 @@ jobs:
         uses: peter-evans/create-or-update-comment@v3
         if: success() && github.event.number && steps.fc.outputs.comment-id == 0
         with:
+          token: ${{ secrets.CREATE_OR_UPDATE_COMMENT }}
           issue-number: ${{ github.event.number }}
           body: ${{ steps.get-comment-body.outputs.body }}
 
@@ -76,6 +77,7 @@ jobs:
         uses: peter-evans/create-or-update-comment@v3
         if: success() && github.event.number && steps.fc.outputs.comment-id != 0
         with:
+          token: ${{ secrets.CREATE_OR_UPDATE_COMMENT }}
           issue-number: ${{ github.event.number }}
           body: ${{ steps.get-comment-body.outputs.body }}
           comment-id: ${{ steps.fc.outputs.comment-id }}
