feat: bundle analyze script

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -1,20 +1,37 @@
 name: Lighthouse Analysis
 
+# Run this workflow on every Pull Request action as well as all pushes to main
 on:
   pull_request:
   push:
     branches:
       - main
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  lighthouseci:
+  # This workflow contains a single job called "lighthouse"
+  lighthouse:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+
+      # Next.js runs on Node — we need to set this up first.
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
           node-version: 20
-      - uses: bahmutov/npm-install@v1
+
+      # Run `npm install`, using a cache
+      - name: Install
+        uses: bahmutov/npm-install@v1
+
       - run: npm install -g @lhci/cli@0.12.x
       - run: npm run build
       - run: lhci collect
