--- a/.github/workflows/bundle_analysis.yml
+++ b/.github/workflows/bundle_analysis.yml
@@ -22,7 +22,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Next.js runs on Node—we need to set this up first.
+      # Next.js runs on Node — we need to set this up first.
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
@@ -33,7 +33,19 @@ jobs:
         uses: bahmutov/npm-install@v1
 
       - name: Build & analyze
-        run: mkdir -p .next/analyze/main && npm run build:analyze | tee .next/analyze/output.txt
+        run: mkdir -p .next/analyze/main && node scripts/analyze-bundles.js | tee .next/analyze/output.txt
+
+      - name: Download main JSON
+        uses: dawidd6/action-download-artifact@v2
+        if: success() && github.event.number
+        with:
+          workflow: bundle_analysis.yml
+          branch: main
+          path: .next/analyze/main
+
+      - name: Compare bundle size
+        if: success() && github.event.number
+        run: ls -laR .next/analyze/main && node scripts/compare-bundles.js
 
       - name: Upload bundle
         uses: actions/upload-artifact@v3
@@ -48,7 +60,7 @@ jobs:
         id: get-comment-body
         if: success() && github.event.number
         run: |
-          body=$(cat .next/analyze/bundle-sizes.txt)
+          body=$(cat .next/analyze/bundle-comparison.txt)
           body="${body//'%'/'%25'}"
           body="${body//$'\n'/'%0A'}"
           body="${body//$'\r'/'%0D'}"
