--- a/.github/workflows/bundle_analysis.yml
+++ b/.github/workflows/bundle_analysis.yml
@@ -28,69 +28,17 @@ jobs:
         with:
           node-version: 20
 
-      # Run `npm install`, using a cache
+      # Run `npm install`, using a cache;
       - name: Install
         uses: bahmutov/npm-install@v1
 
-      - name: Build & analyze
-        run: mkdir -p .next/analyze/main && node scripts/analyze-bundles.js | tee .next/analyze/output.txt
+      - name: Build
+        run: npm run build
 
-      # - name: Download main JSON
-      #   uses: dawidd6/action-download-artifact@v2
-      #   if: success() && github.event.number
-      #   with:
-      #     workflow: bundle_analysis.yml
-      #     branch: main
-      #     path: .next/analyze/main
-
-      # - name: Compare bundle size
-      #   if: success() && github.event.number
-      #   run: ls -laR .next/analyze/main && node scripts/compare-bundles.js
-
-      - name: Upload bundle
-        uses: actions/upload-artifact@v3
+      - name: Analyze bundle
+        uses: andrii-maglovanyi/nextjs-bundle-analyzer@v1.0.23
         with:
-          name: bundle
-          path: |
-            .next/analyze/client.html
-            .next/analyze/bundle.json
-
-      # A bit of find & replace on our output text for displaying properly. Save this to an Action variable.
-      - name: Get comment body
-        id: get-comment-body
-        if: success() && github.event.number
-        run: |
-          body=$(cat .next/analyze/bundle-sizes.txt)
-          body="${body//'%'/'%25'}"
-          body="${body//$'\n'/'%0A'}"
-          body="${body//$'\r'/'%0D'}"
-          echo ::set-output name=body::$body
-
-      # Looks for a comment with <!-- GH BOT --> somewhere in its body.
-      - name: Find Comment
-        uses: peter-evans/find-comment@v2
-        if: success() && github.event.number
-        id: fc
-        with:
-          issue-number: ${{ github.event.number }}
-          body-includes: "<!-- GH BOT -->"
-
-      # If no comment exists, make one with the previously saved Action variable!
-      - name: Create Comment
-        uses: peter-evans/create-or-update-comment@v3
-        if: success() && github.event.number && steps.fc.outputs.comment-id == 0
-        with:
-          token: ${{ secrets.CREATE_OR_UPDATE_COMMENT }}
-          issue-number: ${{ github.event.number }}
-          body: ${{ steps.get-comment-body.outputs.body }}
-
-      # Otherwise, if a comment already exists, replace its body.
-      - name: Update Comment
-        uses: peter-evans/create-or-update-comment@v3
-        if: success() && github.event.number && steps.fc.outputs.comment-id != 0
-        with:
-          token: ${{ secrets.CREATE_OR_UPDATE_COMMENT }}
-          issue-number: ${{ github.event.number }}
-          body: ${{ steps.get-comment-body.outputs.body }}
-          comment-id: ${{ steps.fc.outputs.comment-id }}
-          edit-mode: replace
+          workflow-id: bundle_analysis.yml
+          default-branch: main
+          prefix: .next
+          github-token: ${{ secrets.CREATE_OR_UPDATE_COMMENT }}
