--- a/.github/workflows/bundle_analysis.yml
+++ b/.github/workflows/bundle_analysis.yml
@@ -36,9 +36,10 @@ jobs:
         run: npm run build
 
       - name: Analyze bundle
-        uses: andrii-maglovanyi/nextjs-bundle-analyzer@v1.0.25
+        uses: andrii-maglovanyi/nextjs-bundle-analyzer@v1.0.47
         with:
           workflow-id: bundle_analysis.yml
-          default-branch: main
+          default-branch: rukka
           prefix: .next
+          budget: 1995
           github-token: ${{ secrets.CREATE_OR_UPDATE_COMMENT }}
